resources/webidl2/test/invalid/baseline/spaced-variadic.txt
Syntax error at line 2, since `interface X`:
    void operation(object . . . args
                   ^ Unterminated operation
